--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
       </section>
       
       <%= render 'layouts/footer' %>
+      <%= debug(params) if Rails.env.development? %>
       
    </div>
     
